--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha03'
 
     implementation 'com.hbb20:ccp:2.3.4'
+
+    implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
+
     /*Sdp Library*/
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
