--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,32 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha03'
 
     implementation 'com.hbb20:ccp:2.3.4'
-    /*Sdp Library*/
+    /*Sdp Library*//*
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'*/
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'nl.psdcompany:duo-navigation-drawer:3.0.0' // reside drawer
+    //Size Unit library - sdp (scalable dp) and ssp (scalable sp)
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+    implementation 'com.makeramen:roundedimageview:2.3.0' //Rounded Imageview
+    //Circular ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
+    //Logging Interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    //Multi-Dex
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0' // Glide For Image
+    implementation 'com.tapadoo.android:alerter:3.0.0'// Alert bar
+    // OkHttp & GSON
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
